--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </nav>
     </header>
     <!-- Intro Image-->
-    <section id="intro" style="background: url(img/dos.jpg) center center no-repeat; background-size: cover;" class="intro-section pb-2">
+    <section id="intro" style="background: url(img/dos.JPG) center center no-repeat; background-size: cover;" class="intro-section pb-2">
       <div class="container text-center">
         <div data-animate="fadeInDown" class="logo"><img src="img/favicon.png" alt="logo" width="400"></div>
         <h1 data-animate="fadeInDown" class="text-shadow mb-5">Bienvenido, Welcome!</h1>
