--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <div class="col-sm-12">
           <div class="mb-5 text-center">
             <h2 data-animate="fadeInUp" class="title">Psicoeducacion</h2>
-            <p data-animate="fadeInUp" class="lead">La psicoeducaion es la parte mas importante durante el crecimiento</p>
+            <p data-animate="fadeInUp" class="lead">La psicoeducacion es la parte mas importante durante el crecimiento</p>
           </div>
           <ul id="filter" data-animate="fadeInUp">
             <li class="active"><a href="#" data-filter="all">Todos</a></li>
